--- a/esp01s/data/index.html
+++ b/esp01s/data/index.html
@@ -8,7 +8,7 @@
             display: grid;
             background-color: #303030;
             grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows:  100px 16.6vw 16.6vw;
+            grid-template-rows:  100px 100px 50px 100px 100px;
             width: 50vw;
             height: 50vw;
             overflow: hidden;
@@ -16,23 +16,12 @@
     </style>
 </head>
 <body>
-    <button type="button" style="grid-column: 2; grid-row: 2" id="up"> </button>
-    <button type="button" style="grid-column: 1; grid-row: 3" id="left"> </button>
-    <button type="button" style="grid-column: 3; grid-row: 3" id="right"> </button>
-    <div style="grid-column: 1; grid-row: 1; color: white; user-select: none;">
-        Auto controlable <br>
-        •       <a href="https://github.com/qgerman2/autoh2"> Código fuente</a><br>
-        Integrantes VIP 2022-1<br>
-        • Nolberto Delgadillo<br>
-        • Nicolas Riquelme<br>
-        • Rodrigo Morales<br>
-        • Benjamín González<br>
-        • Fernanda Mesa<br>
-        • Guillermo Jerez<br>
-        • Germán Quijada<br>
-
-
-    </div>
+    <input type="range" style="grid-column: 1/4; grid-row: 1" id="servo1" min="0" max="127" value="63"> </range>
+    <input type="range" style="grid-column: 1/4; grid-row: 2" id="servo2" min="0" max="127" value="63"> </range>
+    <input type="checkbox" style="grid-column: 1/4; grid-row: 3" id="both"> </input>
+    <button type="button" style="grid-column: 2; grid-row: 4" id="on" ></button>
+    <button type="button" style="grid-column: 2; grid-row: 5" id="off" ></button>
+    
 
     <script src="main.js"></script>
 </body>
